loss seg to LongTensor

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 FCN-Paper-Implementation-master/kaggle_train_data/stage1_train
+FCN-Paper-Implementation-master/venv
+FCN-Paper-Implementation-master/venv1
